--- a/static/css/ws1.css
+++ b/static/css/ws1.css
@@ -1,16 +1,14 @@
-.sidebar-nav-fixed {
-    padding: 9px 0;
-    position: fixed;
-    left: 20px;
-    top: 60px;
-    width: 150px;
+div.stretchedMargin {
+    display: block;
+    position: absolute;
+    height: auto;
+    bottom:0;
+    top:0;
+    left:0;
+    right:0;
+    margin-top: 40px;
 }
 
-.sidebar-container {
-    width: 180px;
-    height: 100%;
-}
-
-.sidebar-offset {
-    margin-left: 170px;
+li.first-tab {
+    margin-top: 19px;
 }
