--- a/static/bootstrap/css/bootstrap.css
+++ b/static/bootstrap/css/bootstrap.css
@@ -2738,7 +2738,7 @@ input[type="submit"].btn.btn-mini {
 }
 .tabs-left .nav-tabs {
   float: left;
-  min-height: 100%;
+  height: 100%;
   margin-right: 19px;
   border-right: 1px solid #bbb;
 }
