Finishing touches on unified post.

--- a/static/css/ws1.css
+++ b/static/css/ws1.css
@@ -65,3 +65,9 @@ div.tail_funcs
 {
     margin-bottom: 5px !important;
 }
+
+span.action_span
+{
+    text-transform: capitalize;
+    display: inline;
+}
