More LESS customization

--- a/static/bootstrap/source/less/fshop-overrides.less
+++ b/static/bootstrap/source/less/fshop-overrides.less
@@ -6,6 +6,6 @@
 .label,
 .badge {
   // Fshop (yellow)
-  &-fshop         { background-color: lighten(@flutterDarkPink, 10%) }
-  &-fshop[href]   { background-color: @flutterDarkPink }
+  &-fshop         { background-color: lighten(@flutterDarkYellow, 10%) }
+  &-fshop[href]   { background-color: @flutterDarkYellow }
 }
