Fixed LESS error

--- a/static/components/bootstrap/less/fshop-variables.less
+++ b/static/components/bootstrap/less/fshop-variables.less
@@ -32,7 +32,7 @@
 @navbarBrandColor:                @navbarLinkColor;
 
 // Inverted navbar
-@navbarInverseBackground:                fadeOut(@flutterDarkPink, 10%);
+@navbarInverseBackground:                @flutterDarkPink;
 @navbarInverseBackgroundHighlight:       @flutterPink;
 @navbarInverseBorder:                    @flutterPink;
 
