More reorganizing of styles and scripts. Moved LESS styles out of bootstrap folder so bootstrap can be easily updated.

--- a/static/components/bootstrap/less/bootstrap.less
+++ b/static/components/bootstrap/less/bootstrap.less
@@ -13,7 +13,7 @@
 
 // Core variables and mixins
 @import "variables.less"; // Modify this for custom colors, font-sizes, etc
-@import "fshop-variables.less";
+@import "/static/styles/fsbs-variables.less";
 @import "mixins.less";
 
 // Grid system and page structure
@@ -60,7 +60,7 @@
 @import "carousel.less";
 @import "hero-unit.less";
 
-@import "fshop-overrides.less";
+@import "/static/styles/fsbs-overrides.less";
 
 // Utility classes
 @import "utilities.less"; // Has to be last to override when necessary
